--- a/free-nodes/2025-8-12-free-node-subscribe.htm
+++ b/free-nodes/2025-8-12-free-node-subscribe.htm
@@ -137,6 +137,7 @@ IPLC、IEPL中转，点对点专线连接。高速冲浪，科学上网不二选
                 <div class="clearfix"></div>
                 <div class="col-md-12 mt-5">
                                         <p>上一个：<a href="/free-nodes/2025-8-11-node-share.htm">「8月11日」最高速度22.7M/S，2025年Clash/Shadowrocket/V2ray/SSR每天更新免费节点订阅链接</a></p>
+                                        <p>下一个：<a href="/free-nodes/2025-8-13-free-v2ray-subscribe.htm">「8月13日」最高速度19.9M/S，2025年V2ray/SSR/Shadowrocket/Clash每天更新免费节点订阅链接</a></p>
                                     </div>
                                 <div class="panel panel-default mt-5">
                     <div class="panel-heading">
@@ -165,16 +166,16 @@ IPLC、IEPL中转，点对点专线连接。高速冲浪，科学上网不二选
     </div>
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
-                        <li class="py-2"><a href="/free-nodes/2025-7-12-node-share.htm" title="「7月12日」最高速度20.4M/S，2025年SSR/V2ray/Shadowrocket/Clash每天更新免费节点订阅链接">「7月12日」最高速度20.4M/S，2025年SSR/V2ray/Shadowrocket/Clash每天更新免费节点订阅链接</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-8-5-clash-v2ray-ss-ssr.htm" title="「8月5日」最高速度19.8M/S，2025年Clash/V2ray/Shadowrocket/SSR每天更新免费节点订阅链接">「8月5日」最高速度19.8M/S，2025年Clash/V2ray/Shadowrocket/SSR每天更新免费节点订阅链接</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-7-24-node-share-links.htm" title="「7月24日」最高速度19.9M/S，2025年Shadowrocket/V2ray/Clash/SSR每天更新免费节点订阅链接">「7月24日」最高速度19.9M/S，2025年Shadowrocket/V2ray/Clash/SSR每天更新免费节点订阅链接</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-7-21-free-node-subscribe.htm" title="「7月21日」最高速度21.3M/S，2025年V2ray/Clash/Shadowrocket/SSR每天更新免费节点订阅链接">「7月21日」最高速度21.3M/S，2025年V2ray/Clash/Shadowrocket/SSR每天更新免费节点订阅链接</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-8-7-node-share.htm" title="「8月7日」最高速度18.3M/S，2025年Clash/V2ray/SSR/Shadowrocket每天更新免费节点订阅链接">「8月7日」最高速度18.3M/S，2025年Clash/V2ray/SSR/Shadowrocket每天更新免费节点订阅链接</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-7-10-node-share.htm" title="「7月10日」最高速度19.2M/S，2025年SSR/Shadowrocket/Clash/V2ray每天更新免费节点订阅链接">「7月10日」最高速度19.2M/S，2025年SSR/Shadowrocket/Clash/V2ray每天更新免费节点订阅链接</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-7-6-free-high-speed-nodes.htm" title="「7月6日」最高速度21M/S，2025年Shadowrocket/SSR/Clash/V2ray每天更新免费节点订阅链接">「7月6日」最高速度21M/S，2025年Shadowrocket/SSR/Clash/V2ray每天更新免费节点订阅链接</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-7-26-free-node-subscribe-links.htm" title="「7月26日」最高速度22.6M/S，2025年Clash/Shadowrocket/V2ray/SSR每天更新免费节点订阅链接">「7月26日」最高速度22.6M/S，2025年Clash/Shadowrocket/V2ray/SSR每天更新免费节点订阅链接</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-7-30-free-node-subscribe.htm" title="「7月30日」最高速度21.1M/S，2025年V2ray/Shadowrocket/SSR/Clash每天更新免费节点订阅链接">「7月30日」最高速度21.1M/S，2025年V2ray/Shadowrocket/SSR/Clash每天更新免费节点订阅链接</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-8-9-free-node-subscribe-links.htm" title="「8月9日」最高速度19.6M/S，2025年Shadowrocket/V2ray/SSR/Clash每天更新免费节点订阅链接">「8月9日」最高速度19.6M/S，2025年Shadowrocket/V2ray/SSR/Clash每天更新免费节点订阅链接</a></li>
                         <li class="py-2"><a href="/free-nodes/2025-7-7-free-node-subscribe-links.htm" title="「7月7日」最高速度20.8M/S，2025年Shadowrocket/V2ray/SSR/Clash每天更新免费节点订阅链接">「7月7日」最高速度20.8M/S，2025年Shadowrocket/V2ray/SSR/Clash每天更新免费节点订阅链接</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-8-4-node-share-links.htm" title="「8月4日」最高速度20.9M/S，2025年Clash/SSR/Shadowrocket/V2ray每天更新免费节点订阅链接">「8月4日」最高速度20.9M/S，2025年Clash/SSR/Shadowrocket/V2ray每天更新免费节点订阅链接</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-8-17-clash-v2ray-ss-ssr.htm" title="「8月17日」最高速度21M/S，2025年SSR/Clash/V2ray/Shadowrocket每天更新免费节点订阅链接">「8月17日」最高速度21M/S，2025年SSR/Clash/V2ray/Shadowrocket每天更新免费节点订阅链接</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-8-8-clash-v2ray-ss-ssr.htm" title="「8月8日」最高速度21.8M/S，2025年V2ray/Clash/SSR/Shadowrocket每天更新免费节点订阅链接">「8月8日」最高速度21.8M/S，2025年V2ray/Clash/SSR/Shadowrocket每天更新免费节点订阅链接</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-7-26-free-node-subscribe-links.htm" title="「7月26日」最高速度22.6M/S，2025年Clash/Shadowrocket/V2ray/SSR每天更新免费节点订阅链接">「7月26日」最高速度22.6M/S，2025年Clash/Shadowrocket/V2ray/SSR每天更新免费节点订阅链接</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-8-7-node-share.htm" title="「8月7日」最高速度18.3M/S，2025年Clash/V2ray/SSR/Shadowrocket每天更新免费节点订阅链接">「8月7日」最高速度18.3M/S，2025年Clash/V2ray/SSR/Shadowrocket每天更新免费节点订阅链接</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-7-31-free-subscribe-node.htm" title="「7月31日」最高速度20.9M/S，2025年Clash/Shadowrocket/V2ray/SSR每天更新免费节点订阅链接">「7月31日」最高速度20.9M/S，2025年Clash/Shadowrocket/V2ray/SSR每天更新免费节点订阅链接</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-8-3-free-v2ray.htm" title="「8月3日」最高速度22.4M/S，2025年V2ray/Clash/Shadowrocket/SSR每天更新免费节点订阅链接">「8月3日」最高速度22.4M/S，2025年V2ray/Clash/Shadowrocket/SSR每天更新免费节点订阅链接</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-8-18-clash-v2ray-ss-ssr.htm" title="「8月18日」最高速度19.6M/S，2025年Clash/V2ray/SSR/Shadowrocket每天更新免费节点订阅链接">「8月18日」最高速度19.6M/S，2025年Clash/V2ray/SSR/Shadowrocket每天更新免费节点订阅链接</a></li>
                     </ul>
     </div>
 </div>
@@ -186,7 +187,7 @@ IPLC、IEPL中转，点对点专线连接。高速冲浪，科学上网不二选
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
                         <li class="py-2">
-                <h4><span class="badge" style="float: right;">12</span> <a href="/date/2025-08/" title="2025-08 归档">2025-08</a></h4>
+                <h4><span class="badge" style="float: right;">18</span> <a href="/date/2025-08/" title="2025-08 归档">2025-08</a></h4>
             </li>
                         <li class="py-2">
                 <h4><span class="badge" style="float: right;">26</span> <a href="/date/2025-07/" title="2025-07 归档">2025-07</a></h4>
